[gd_scene load_steps=3 format=3 uid="uid://e700wq3wrpb"]

[ext_resource type="Theme" uid="uid://1h40sciui403" path="res://themes/main_menu_theme.tres" id="1_hcuuh"]
[ext_resource type="Script" path="res://menu_popup.gd" id="1_wn67v"]

[node name="MenuPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hcuuh")
script = ExtResource("1_wn67v")
metadata/_edit_lock_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="OuterMargin" type="MarginContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
metadata/_edit_lock_ = true

[node name="PopupPanel" type="PanelContainer" parent="CenterContainer/OuterMargin"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_lock_ = true

[node name="InnerMargin" type="MarginContainer" parent="CenterContainer/OuterMargin/PopupPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/OuterMargin/PopupPanel/InnerMargin"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="MessageLabel" type="Label" parent="CenterContainer/OuterMargin/PopupPanel/InnerMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Warning! Save file will be deleted.
Continue?"
horizontal_alignment = 1

[node name="Control" type="Control" parent="CenterContainer/OuterMargin/PopupPanel/InnerMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonHBox" type="HBoxContainer" parent="CenterContainer/OuterMargin/PopupPanel/InnerMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="YesButton" type="Button" parent="CenterContainer/OuterMargin/PopupPanel/InnerMargin/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../NoButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../NoButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
theme_override_font_sizes/font_size = 24
text = "Yes"

[node name="NoButton" type="Button" parent="CenterContainer/OuterMargin/PopupPanel/InnerMargin/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../YesButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../YesButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
theme_override_font_sizes/font_size = 24
text = "No"

[connection signal="pressed" from="CenterContainer/OuterMargin/PopupPanel/InnerMargin/VBoxContainer/ButtonHBox/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="CenterContainer/OuterMargin/PopupPanel/InnerMargin/VBoxContainer/ButtonHBox/NoButton" to="." method="_on_no_button_pressed"]
